# python_labs

./: .coverage  README.md  pyproject.toml  simple_test.py  test.txt  test.xlsx
data/lab05/samples/: people.csv  people.json
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
src/data/lab05/samples/: people.json
src/lab01/: README.md  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py
src/lab02/: README.md  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py
src/lab03/: README.md  text_stats.py
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  main.py  models.py  serialize.py
src/lab09/: README.MD  group.py  main.py
src/lab10/: README.md  linked_list.py  structures.py  test_lab10.py
src/lib/: io_helpers.py  text.py
tests/: test_json_csv.py  test_text.py
Тесты для лаб/: simple_test.py  testlab05.py  testlab08.py
