[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "python_labs"
version = "0.1.0"

dependencies = [
    "pytest",
    "pytest-cov",
]

[project.optional-dependencies]
dev = [
    "black",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]